--- a/gestaourbana/package.json
+++ b/gestaourbana/package.json
@@ -37,5 +37,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
     "webpack-bundle-tracker": "^0.2.0"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
