--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,170 @@
-Django>=1.11,<1.12
-wagtail>=1.12,<1.13
+alabaster==0.7.9
+anaconda-client==1.6.0
+anaconda-navigator==1.4.3
+astroid==1.4.9
+astropy==1.3
+autopep8==1.3.2
+Babel==2.3.4
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.5.3
+bitarray==0.8.1
+blaze==0.10.1
+bokeh==0.12.4
+boto==2.45.0
+Bottleneck==1.2.0
+cffi==1.9.1
+chardet==2.3.0
+chest==0.2.3
+click==6.7
+cloudpickle==0.2.2
+clyent==1.2.2
+colorama==0.3.7
+comtypes==1.1.2
+conda==4.3.8
+configobj==5.0.6
+contextlib2==0.5.4
+cryptography==1.7.1
+cycler==0.10.0
+Cython==0.25.2
+cytoolz==0.8.2
+dask==0.13.0
+datashape==0.5.4
+decorator==4.0.11
+dill==0.2.5
+Django==1.11.5
+django-categories==1.5.3
+django-colorful==1.2
+django-extensions==1.9.1
+django-modelcluster==3.1
+django-mptt==0.8.7
+django-newsletter==0.6
+django-newsletters==0.0.3
+django-taggit==0.22.1
+django-treebeard==4.1.2
+django-webpack-loader==0.5.0
+django-webtest==1.9.2
+djangorestframework==3.6.4
+docutils==0.13.1
+et-xmlfile==1.0.1
+fastcache==1.0.2
+Flask==0.12
+Flask-Cors==3.0.2
+gevent==1.2.1
+greenlet==0.4.11
+h5py==2.6.0
+HeapDict==1.0.0
+html5lib==0.999999999
+idna==2.2
+imagesize==0.7.1
+ipykernel==4.5.2
+ipython==5.1.0
+ipython-genutils==0.1.0
+ipywidgets==5.2.2
+isort==4.2.5
+itsdangerous==0.24
+jdcal==1.3
+jedi==0.9.0
+Jinja2==2.9.4
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.4.0
+jupyter-console==5.0.0
+jupyter-core==4.2.1
+lazy-object-proxy==1.2.2
+ldif3==3.1.1
+llvmlite==0.15.0
+locket==0.2.0
+lxml==3.7.2
+MarkupSafe==0.23
+matplotlib==2.0.0
+menuinst==1.4.4
+mistune==0.7.3
+mpmath==0.19
+multipledispatch==0.4.9
+nbconvert==4.2.0
+nbformat==4.2.0
+networkx==1.11
+nltk==3.2.2
+nose==1.3.7
+notebook==4.3.1
+numba==0.30.1
+numexpr==2.6.1
+numpy==1.11.3
+numpydoc==0.6.0
+odo==0.5.0
+olefile==0.44
+openpyxl==2.4.1
+pandas==0.19.2
+partd==0.3.7
+path.py==0.0.0
+pathlib2==2.2.0
+patsy==0.4.1
+pep8==1.7.0
+pickleshare==0.7.4
+Pillow==4.0.0
+ply==3.9
+prompt-toolkit==1.0.9
+psutil==5.0.1
+py==1.4.32
+pyasn1==0.1.9
+pycodestyle==2.3.1
+pycosat==0.6.1
+pycparser==2.17
+pycrypto==2.6.1
+pycurl==7.43.0
+pyflakes==1.5.0
+Pygments==2.1.3
+pylint==1.6.4
+pyOpenSSL==16.2.0
+pyparsing==2.1.4
+pytest==3.0.5
+python-card-me==0.9.3
+python-dateutil==2.6.0
+pytz==2016.10
+pywin32==220
+PyYAML==3.12
+pyzmq==16.0.2
+QtAwesome==0.4.3
+qtconsole==4.2.1
+QtPy==1.2.1
+requests==2.12.4
+rope-py3k==0.9.4.post1
+scikit-image==0.12.3
+scikit-learn==0.18.1
+scipy==0.18.1
+seaborn==0.7.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
+snowballstemmer==1.2.1
+sockjs-tornado==1.0.3
+sorl-thumbnail==12.4a1
+sphinx==1.5.1
+spyder==3.1.2
+SQLAlchemy==1.1.5
+statsmodels==0.6.1
+surlex==0.2.0
+sympy==1.0
+tables==3.2.2
+toolz==0.8.2
+tornado==4.4.2
+traitlets==4.3.1
+unicode-slugify==0.1.3
+unicodecsv==0.14.1
+Unidecode==0.4.21
+virtualenv==15.1.0
+wagtail==1.12.2
+waitress==1.0.2
+wcwidth==0.1.7
+webencodings==0.5.1
+WebOb==1.7.3
+WebTest==2.0.28
+Werkzeug==0.11.15
+widgetsnbextension==1.2.6
+Willow==0.4
+win-unicode-console==0.5
+wrapt==1.10.8
+xlrd==1.0.0
+XlsxWriter==0.9.6
+xlwings==0.10.2
+xlwt==1.2.0
