--- a/requirements.txt
+++ b/requirements.txt
@@ -34,12 +34,17 @@ dill==0.2.5
 Django==1.11.5
 django-categories==1.5.3
 django-colorful==1.2
+django-contrib-comments==1.8.0
+django-crispy-forms==1.6.1
 django-extensions==1.9.1
+django-fluent-comments==1.4.3
 django-modelcluster==3.1
 django-mptt==0.8.7
 django-newsletter==0.6
 django-newsletters==0.0.3
+django-tag-parser==3.1
 django-taggit==0.22.1
+django-threadedcomments==1.1
 django-treebeard==4.1.2
 django-webpack-loader==0.5.0
 django-webtest==1.9.2
@@ -118,6 +123,7 @@ pylint==1.6.4
 pyOpenSSL==16.2.0
 pyparsing==2.1.4
 pytest==3.0.5
+python-akismet==0.3.0
 python-card-me==0.9.3
 python-dateutil==2.6.0
 pytz==2016.10
